Mainly content changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
 
-  <small>Check this out.</small>
+  <small>Uczymy się tylko poprzez błędy. Sztuką jest wyciągać dobre wnioski...</small>
 
 </footer>
