--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header>
 
   <h1>
+  <img src="https://img.icons8.com/ios-filled/50/000000/exchange-dollar.png">
     <a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
   </h1>
 
