--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
 
   <h1>
-  <img src="https://img.icons8.com/ios-filled/50/000000/exchange-dollar.png">
+  <img src="https://img.icons8.com/ios-filled/50/000000/exchange-dollar.png" width="50" height="50">
     <a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
   </h1>
 
