--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
 
   <h1>
-	<table><tr><td><img src="https://img.icons8.com/ios-filled/50/000000/exchange-dollar.png"></td><td><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></td></tr></table>
+	<table><tr><td><img src="/resources/logo.png"></td><td><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></td></tr></table>
   </h1>
 
   <nav>
