--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,3 +1,5 @@
+<a href = "mailto: tomasz.pers@outlook.com"></a>
+
 <form name="contact" method="POST" netlify>
   <label for="name">Name</label>
   <input type="text" name="name" id="name" autocomplete="name" placeholder="Imie" title="Tu wpisz swoje imię :)" required>
