--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,4 +1,4 @@
-<a href = "mailto: tomasz.pers@outlook.com"></a>
+<p><a href = "mailto: tomasz.pers@outlook.com">tomasz.pers@outoook.com</a></p>
 
 <form name="contact" method="POST" netlify>
   <label for="name">Name</label>
