--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
 
   <h1>
-	<table><tr><td><a href="blednyinwestor.pl/"><img alt="Home" src="/resources/logo.png"</a></td><td><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></td></tr></table>
+	<table><tr><a href="/"><img alt="Home" src="/resources/logo.png"</a><td><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></td></tr></table>
   </h1>
 
   <nav>
