--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,5 +1,4 @@
-<p><a href = "mailto: tomasz.pers@outlook.com">tomasz.pers@outoook.com</a></p>
-<p>lub</p>
+<p><a href = "mailto: tomasz.pers@outlook.com">tomasz.pers@outlook.com</a></p>
 <form name="contact" method="POST" netlify>
   <label for="name">Name</label>
   <input type="text" name="name" id="name" autocomplete="name" placeholder="Imie" title="Tu wpisz swoje imię :)" required>
