--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header>
 
   <h1>
-	<table><tr><td><a href="/"><img alt="Home" src="/resources/logo.png" width="50" height="50"</a></td><td><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></td></tr></table>
+	<!--<table><tr><td><a href="/"><img alt="Home" src="/resources/logo.png" width="50" height="50"</a></td><td><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></td></tr></table>-->
+	<a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
   </h1>
 
   <nav>
