--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,8 @@ layout: default
 
 {{ content }}
 
+<h3>Komentarze proszę podsyłać na maila lub zapraszam na <a href="https://discord.gg/mqTGmN">Discord</a></h3>
+
 <nav aria-label="Adjacent Posts">
   <ul>
     {% if page.previous.url %}
