--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
 
 {{ content }}
 
-<h3>Komentarze proszę podsyłać na maila lub zapraszam na <a href="https://discord.gg/mqTGmN">Discord</a></h3>
+<h5>Sekcja komentarzy... W planach. Jeśli jakieś się pojawią, to proszę podsyłać na maila lub zapraszam na <a href="https://discord.gg/mqTGmN">Discord</a></h5>
 
 <nav aria-label="Adjacent Posts">
   <ul>
