--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -93,8 +93,8 @@ header > nav {
 main {
   width: 100%;
   max-width: 100rem;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 10rem;
+  margin-left: 10rem;
   grid-column: main;
   display: grid;
   padding-top: 8rem;
