--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -95,7 +95,7 @@ main {
   max-width: 100%;
   margin-right: 1rem;
   margin-left: 1rem;
-  grid-column: main;
+  /*grid-column: main;*/
   display: grid;
   padding-top: 8rem;
   padding-bottom: 8rem;
